--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mmhh2.myapplication.MainActivity">
+    tools:context="com.example.mmhh2.myapplication.MainActivity"
+    android:id="@+id/mainLayout">
 
     <LinearLayout
         android:orientation="vertical"
