تعديل المقاسات و كتابت الاي دي

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,15 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:weightSum="1">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:id="@+id/linearLayout4"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <ImageView
             android:layout_width="150dp"
@@ -32,7 +35,6 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/numCard"
-            android:layout_gravity="center_horizontal"
             android:padding="7dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
@@ -52,41 +54,58 @@
             android:contextClickable="false"
             android:textColor="@color/switch_thumb_disabled_material_light"
             android:text="@string/card"
-            android:background="@android:drawable/editbox_background_normal" />
+            android:background="@drawable/abc_cab_background_top_mtrl_alpha" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/linearLayout4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp"
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical"
+        android:paddingRight="70dp"
+        android:paddingLeft="70dp">
+
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:text="@string/recharge"
+            android:id="@+id/btnCharge"
+            android:textColor="@color/abc_primary_text_disable_only_material_dark"
+            android:background="@color/blue" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/recharge"
-                android:id="@+id/btnCharge"
-                android:background="@color/blue"
-                android:textColor="@color/abc_primary_text_disable_only_material_dark" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/inquire_balance"
+            android:id="@+id/btnCheck"
+            android:background="@color/blue"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/abc_primary_text_material_dark" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/inquire_balance"
-                android:id="@+id/btnCheck"
-                android:background="@color/blue"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/abc_primary_text_material_dark" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/contact_me"
+            android:id="@+id/btnContact"
+            android:background="@color/blue"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/abc_primary_text_material_dark" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/contact_me"
-                android:id="@+id/button"
-                android:background="@color/blue"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/abc_primary_text_material_dark" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/settings"
+            android:id="@+id/btnSettings"
+            android:background="@color/blue"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:focusableInTouchMode="false" />
 
-        </LinearLayout>
 
     </LinearLayout>
 
