--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -28,7 +28,7 @@
             android:background="@color/blue"
             android:textColor="@color/abc_primary_text_disable_only_material_dark"
             android:layout_marginLeft="20dp"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.25" />
 
         <Button
             android:layout_width="wrap_content"
@@ -38,16 +38,29 @@
             android:background="@color/blue"
             android:textColor="@color/abc_primary_text_material_dark"
             android:layout_marginLeft="20dp"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.25" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/contact_me"
-            android:id="@+id/button"
+            android:id="@+id/btnContact"
             android:background="@color/blue"
             android:textColor="@color/abc_primary_text_material_dark"
-            android:layout_weight="0.3"
+            android:layout_weight="0.25"
+            android:layout_marginLeft="20dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings"
+            android:id="@+id/btnSettings"
+            android:background="@color/blue"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:layout_weight="0.25"
+            android:layout_below="@+id/linearLayout2"
+            android:layout_toRightOf="@+id/linearLayout"
+            android:layout_toEndOf="@+id/linearLayout"
             android:layout_marginLeft="20dp" />
 
     </LinearLayout>
@@ -69,6 +82,7 @@
             android:layout_alignBottom="@+id/linearLayout2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -103,10 +117,11 @@
             android:contextClickable="false"
             android:textColor="@color/switch_thumb_disabled_material_light"
             android:text="@string/card"
-            android:background="@android:drawable/editbox_background_normal"
+            android:background="@drawable/abc_cab_background_top_mtrl_alpha"
             android:layout_above="@+id/linearLayout2"
             android:layout_toRightOf="@+id/linearLayout"
             android:layout_toEndOf="@+id/linearLayout" />
+
     </LinearLayout>
 
 </RelativeLayout>
