--- a/app/src/main/res/drawable/buttoncolornew.xml
+++ b/app/src/main/res/drawable/buttoncolornew.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#A5CAE6"
-        android:endColor="#74A6CC" android:angle="45">
+    <gradient android:startColor="#528CCB"
+        android:endColor="#528CCB" android:angle="45">
 
     </gradient>
 
-    <corners android:radius="70dp"/>
-    <padding android:bottom="5pt" android:left="6pt" android:right="10pt">
+    <corners android:radius="30dp"/>
+    <padding android:bottom="1pt" android:left="6pt" android:right="10pt">
     </padding>
 </shape>
