--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:id="@+id/imageView2"
-            android:background="@drawable/image1"
-            android:layout_gravity="center_horizontal" />
+            android:background="@drawable/image1" />
 
         <EditText
             android:layout_width="fill_parent"
@@ -59,57 +58,107 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout2"
         android:layout_below="@+id/linearLayout4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
-        android:layout_alignParentEnd="true"
-        android:orientation="vertical"
-        android:paddingRight="70dp"
-        android:paddingLeft="70dp"
-        android:weightSum="1">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp">
 
-        <Button
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/recharge"
-            android:id="@+id/btnCharge"
-            android:textColor="@color/abc_primary_text_disable_only_material_dark"
-            android:background="@drawable/buttoncolornew" />
+            android:orientation="vertical"
+            android:weightSum="1"
+            android:layout_below="@+id/linearLayout4"
+            android:id="@+id/linearLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/inquire_balance"
-            android:id="@+id/btnCheck"
-            android:background="@drawable/buttoncolornew"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/abc_primary_text_material_dark" />
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/inquire_balance"
+                android:id="@+id/btnCheck"
+                android:background="@drawable/buttoncolornew"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/abc_primary_text_material_dark" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/contact_me"
-            android:id="@+id/btnContact"
-            android:background="@drawable/buttoncolornew"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/abc_primary_text_material_dark" />
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/settings"
+                android:id="@+id/btnSettings"
+                android:background="@drawable/buttoncolornew"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/abc_primary_text_material_dark"
+                android:focusableInTouchMode="false"
+                android:elegantTextHeight="false"
+                android:contextClickable="false"
+                android:clickable="true"
+                android:layout_marginBottom="10dp" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/settings"
-            android:id="@+id/btnSettings"
-            android:background="@drawable/buttoncolornew"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/abc_primary_text_material_dark"
-            android:focusableInTouchMode="false"
-            android:elegantTextHeight="false"
-            android:contextClickable="false"
-            android:clickable="true" />
 
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignLeft="@+id/linearLayout2"
+        android:layout_alignEnd="@+id/linearLayout2">
+
+        <RadioGroup
+            android:layout_width="43dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/radioGroup"
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center_vertical">
+
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButton2"
+                android:layout_marginBottom="10dp" />
+
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButton"
+                android:layout_marginTop="10dp" />
+        </RadioGroup>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/recharge"
+                android:id="@+id/btnCharge"
+                android:textColor="@color/abc_primary_text_disable_only_material_dark"
+                android:background="@drawable/buttoncolornew"
+                android:layout_marginBottom="10dp" />
+
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/contact_me"
+                android:id="@+id/btnContact"
+                android:background="@drawable/buttoncolornew"
+                android:textColor="@color/abc_primary_text_material_dark" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
