--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
         android:id="@+id/linearLayout4"
@@ -66,52 +66,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="1"
-            android:layout_below="@+id/linearLayout4"
-            android:id="@+id/linearLayout"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true">
-
-            <Button
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:text="@string/inquire_balance"
-                android:id="@+id/btnCheck"
-                android:background="@drawable/buttoncolornew"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/abc_primary_text_material_dark" />
-
-            <Button
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:text="@string/settings"
-                android:id="@+id/btnSettings"
-                android:background="@drawable/buttoncolornew"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/abc_primary_text_material_dark"
-                android:focusableInTouchMode="false"
-                android:elegantTextHeight="false"
-                android:contextClickable="false"
-                android:clickable="true"
-                android:layout_marginBottom="10dp" />
-
-
-        </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignLeft="@+id/linearLayout2"
-        android:layout_alignEnd="@+id/linearLayout2">
+        android:id="@+id/linearLayout3"
+        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_alignEnd="@+id/linearLayout">
 
         <RadioGroup
             android:layout_width="43dp"
@@ -159,6 +123,42 @@
                 android:textColor="@color/abc_primary_text_material_dark" />
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:weightSum="1"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp">
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="@string/inquire_balance"
+            android:id="@+id/btnCheck"
+            android:background="@drawable/buttoncolornew"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/abc_primary_text_material_dark" />
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="@string/settings"
+            android:id="@+id/btnSettings"
+            android:background="@drawable/buttoncolornew"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:focusableInTouchMode="false"
+            android:elegantTextHeight="false"
+            android:contextClickable="false"
+            android:clickable="true"
+            android:layout_marginBottom="10dp" />
+
 
     </LinearLayout>
 
