--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/imageView2"
-            android:background="@drawable/image1" />
+            android:id="@+id/imageMobile"
+            android:background="@drawable/image1"
+            android:contentDescription="Mobile" />
 
         <EditText
             android:layout_width="fill_parent"
