--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mmhh2.myapplication.MainActivity"
-    android:id="@+id/mainLayout">
+    android:id="@+id/mainHome">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:id="@+id/linearLayout4"
+        android:id="@+id/imgNum"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
@@ -62,18 +62,18 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout3"
+        android:id="@+id/linearRadio"
         android:layout_marginTop="17dp"
-        android:layout_below="@+id/linearLayout4"
-        android:layout_alignLeft="@+id/linearLayout"
-        android:layout_alignEnd="@+id/linearLayout">
+        android:layout_below="@+id/imgNum"
+        android:layout_alignLeft="@+id/btnCS"
+        android:layout_alignEnd="@+id/btnCS">
 
         <RadioGroup
             android:layout_width="43dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/radioGroup"
-            android:layout_below="@+id/linearLayout"
+            android:layout_below="@+id/btnCS"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:gravity="center_vertical">
@@ -81,20 +81,21 @@
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioButton2"
+                android:id="@+id/radioCharge"
                 android:layout_marginBottom="10dp" />
 
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioButton"
+                android:id="@+id/radioContact"
                 android:layout_marginTop="10dp" />
         </RadioGroup>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/btnCC">
 
             <Button
                 android:layout_width="180dp"
@@ -122,8 +123,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="1"
-        android:id="@+id/linearLayout"
-        android:layout_below="@+id/linearLayout3"
+        android:id="@+id/btnCS"
+        android:layout_below="@+id/linearRadio"
         android:layout_centerHorizontal="true">
 
         <Button
